# pico-examples

i2c/mpu6050_i2c/: mpu6050_i2c.c
spi/mpu9250_spi/: CMakeLists.txt  mpu9250_spi.c
